Minor lint fix