@@ -46,7 +46,7 @@ public final class ClassScanner {
         URL packageUrl = baseClass.getClassLoader().getResource(packagePath);
 
         if (packageUrl.getProtocol().equals("jar")) {
-            String jarFileName = URLDecoder.decode(packageUrl.getFile(), StandardCharsets.UTF_8.name());
+            String jarFileName = URLDecoder.decode(packageUrl.getFile(), StandardCharsets.UTF_8);
             try (JarFile jf = new JarFile(jarFileName.substring(5, jarFileName.indexOf("!")))) {
                 Enumeration<JarEntry> jarEntries = jf.entries();
                 while (jarEntries.hasMoreElements()) {
